PR/46811: Tetsua Isaki: Don't handle cpu limits when runtime is negative.